--- a/template.yaml
+++ b/template.yaml
@@ -493,7 +493,7 @@ Resources:
       DeploymentStyle:
         DeploymentOption: WITH_TRAFFIC_CONTROL
         DeploymentType: BLUE_GREEN
-      EcsServices:
+      ECSServices:
         - ClusterName: !Ref EcsCluster
           ServiceName: !Ref EcsService
       LoadBalancerInfo:
