fix: use GetAtt to get the name of the EcsService instead of the ARN

--- a/template.yaml
+++ b/template.yaml
@@ -495,7 +495,7 @@ Resources:
         DeploymentType: BLUE_GREEN
       ECSServices:
         - ClusterName: !Ref EcsCluster
-          ServiceName: !Ref EcsService
+          ServiceName: !GetAtt EcsService.Name
       LoadBalancerInfo:
         TargetGroupPairInfoList:
           - TargetGroups:
