--- a/template.yaml
+++ b/template.yaml
@@ -625,7 +625,7 @@ Resources:
     Properties:
       MaxCapacity: 4
       MinCapacity: 1
-      ResourceId: !Sub service/${EcsCluster}/${EcsService}  
+      ResourceId: !Sub service/${EcsCluster}/${EcsServiceName}  
       RoleARN: !GetAtt ApplicationAutoScalingRole.Arn
       ScalableDimension: ecs:service:DesiredCount
       ServiceNamespace: ecs
